added FastAPI routes, monitoring view and test - Add patient and monitoring routes - Create optimized monitoring view with indexes - Add pytest configuration and initial tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# Python
 .env
-ETL/
+venv/
 .idea/
+__pycache__/
+.pytest_cache/
+
+# Project files
+ETL/
+
+# IDE
+.vscode/
+.idea/
+
+# OS
+.DS_Store
