--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,15 @@ venv/
 __pycache__/
 .pytest_cache/
 
+# Node.js
+node_modules/
+dist/
+build/
+
 # Project files
 ETL/
+docker/
+data.txt
 
 # IDE
 .vscode/
