--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,12 @@
-fastapi
-uvicorn
-python-dotenv
-sqlalchemy
-psycopg2-binary
-pydantic
-pydantic-settings
+fastapi==0.115.2
+uvicorn==0.34.2
+python-dotenv==1.0.1
+sqlalchemy==2.0.39
+psycopg2-binary==2.9.10
+pydantic==2.10.2
+pydantic-settings==2.0.2
 # Testing dependencies
-pytest
-httpx
-testcontainers-postgres
-pytest-asyncio
+pytest==7.4.3
+httpx==0.25.0
+testcontainers-postgres==1.19.0
+pytest-asyncio==0.21.0
