--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,19 +1,27 @@
+// {
+//   "files": [],
+//   "references": [
+//     { "path": "./tsconfig.app.json" },
+//     { "path": "./tsconfig.node.json" }
+//   ],
+//   "compilerOptions": {
+//     "noImplicitAny": false,
+//     "jsx": "react-jsx",
+//     "types": ["react"],
+//     "composite": true,
+//     "noEmit": true,
+//     "baseUrl": ".",
+//     "paths": {
+//       "@/*": ["./src/*"]
+//     }
+//   },
+//   "include": ["src"]
+// }
+
 {
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ],
-  "compilerOptions": {
-    "noImplicitAny": false,
-    "jsx": "react-jsx",
-    "types": ["react"],
-    "composite": true,
-    "noEmit": true,
-    "baseUrl": ".",
-    "paths": {
-      "@/*": ["./src/*"]
-    }
-  },
-  "include": ["src"]
+  ]
 }
