--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.2.0",
     "tw-animate-css": "^1.2.8"
   },
@@ -44,6 +45,6 @@
     "tailwindcss": "^3.4.17",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.3"
   }
 }
