--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,14 +1,22 @@
-FROM node:20
+FROM node:22.15-slim AS build_stage
 
 WORKDIR /app
-
 COPY package*.json ./
-RUN npm install
+
+RUN npm i
 
 COPY . .
 
-# EXPOSE 4173
-EXPOSE 3000
+RUN npm run build
 
-# CMD ["npm", "run", "preview", "--host"]
-CMD ["npm", "run", "dev", "--host"]
+FROM node:22.15-slim AS production
+
+WORKDIR /webapp
+RUN npm i -g serve
+
+# Copy all the dist
+COPY --from=build_stage /app/dist .
+
+EXPOSE 80
+
+CMD [ "serve", "-s", ".", "-l", "80" ]
